chore: fix toolbar scrollbar on mac and move toolbar to top

--- a/packages/styles/src/Styles/_scrollbar.scss
+++ b/packages/styles/src/Styles/_scrollbar.scss
@@ -16,7 +16,9 @@
     background-clip: padding-box;
     -webkit-border-radius: 10px;
     background-color: var(--sn-stylekit-scrollbar-thumb-color);
-    -webkit-box-shadow: inset -1px -1px 0px rgba(0, 0, 0, 0.05), inset 1px 1px 0px rgba(0, 0, 0, 0.05);
+    -webkit-box-shadow:
+      inset -1px -1px 0px rgba(0, 0, 0, 0.05),
+      inset 1px 1px 0px rgba(0, 0, 0, 0.05);
   }
 
   ::-webkit-scrollbar-button {
@@ -27,6 +29,18 @@
 
   ::-webkit-scrollbar-corner {
     background-color: transparent;
+  }
+
+  .super-toolbar {
+    ::-webkit-scrollbar {
+      height: 0;
+    }
+
+    @media screen and (min-width: 768px) {
+      ::-webkit-scrollbar {
+        height: 13px;
+      }
+    }
   }
 
   scrollbar-width: thin;
